# Claudia

./: .gitignore  AGENTS.md  CLAUDE.md  CRITICAL_HOTPATH_FIX.md  DDS_FIX_COMPLETE.md  HARDWARE_TEST_GUIDE.md  README.ja.md  README.md  README.zh.md  production_commander.py  pyproject.toml  pytest.ini  setup.py  start_production_brain.sh  start_production_brain_v2.sh  voice_commander.py
.github/workflows/: mirror-to-nvidiasamp.yml
docs/: DEMO_VIDEO_PLAN.md  FINAL_SOLUTION_7B_LOCAL.md  INTELLIGENT_LLM_ARCHITECTURE.md  LLM_PERFORMANCE_OPTIMIZATION_PLAN.md  PRACTICAL_INTELLIGENT_SOLUTION.md  README.md
docs/architecture/: CORRECT_LLM_ARCHITECTURE.md  FINAL_BRAIN_ARCHITECTURE_PROPOSAL.md  FINAL_FEASIBILITY_REPORT.md  HYBRID_ARCHITECTURE_FEASIBILITY_ANALYSIS.md  INTELLIGENT_LLM_ARCHITECTURE.md  LLM_FRAMEWORK_ANALYSIS.md  NEW_BRAIN_ARCHITECTURE_SUCCESS.md  task11_architecture_design.md
docs/deployment/: DEPLOYMENT_PHASE1_COMPLETE.md  FINAL_BREAKTHROUGH_SUMMARY.md  FINAL_SOLUTION_7B_LOCAL.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PRODUCTION_READY.md  claudia_model_usage_guide.md  claudia_model_v2_optimization_summary.md  ollama_qwen25_deployment_summary.md
docs/guides/: ENHANCED_JAPANESE_COMMANDER.md  HARDWARE_TEST_GUIDE.md  INTERACTIVE_JAPANESE_COMMANDER.md  LED_SYSTEM_VERIFICATION_REPORT.md  LED_USAGE_GUIDE.md  LLM_BRAIN_UPGRADE_GUIDE.md  PROJECT_STATUS_COMPLETE.md  QUICK_START_CHECKLIST.md  QUICK_TEST_v12.1.md  dependencies.md  environment_setup.md
docs/optimization/: BRAIN_OPTIMIZATION_REPORT.md  FINAL_OPTIMIZATION_DEPLOYMENT_REPORT.md  LLM_PERFORMANCE_OPTIMIZATION_PLAN.md  PHASE2_OPTIMIZATION_REPORT.md  PRACTICAL_INTELLIGENT_SOLUTION.md  PROMPT_OPTIMIZATION_REPORT.md  TASK11_OPTIMIZATION_SUMMARY.md  v12.1_FINAL_UPGRADE_SUMMARY.md  v12.2_CLEANUP_SUPPLEMENT.md  v12.2_LOGIC_FIX.md  v12.2_OPTIMIZATION_SUMMARY.md
docs/sdk-analysis/: COMPLETE_API_ANALYSIS.md  COMPLEX_ACTION_SEQUENCE_RESEARCH.md  DANCE_SELECTION_GUIDE.md  GO2_SUPPORTED_ACTIONS.md  REAL_ACTION_API_MAPPING_ANALYSIS.md  REAL_REMOTE_CONTROLLER_ANALYSIS.md  SDK_LIMITATION_ANALYSIS.md
models/: ClaudiaAction_v1.0  ClaudiaAction_v2.0  ClaudiaAction_v2.1  ClaudiaAction_v3.0  ClaudiaGo2_v11.3_Japanese.modelfile  ClaudiaIntelligent_7B_v2.0  ClaudiaIntelligent_7B_v2.0.modelfile  README.md
scripts/: README.md  audit_baseline.py  e2e_timing_analysis.py  offline_route_comparison.py  setup_asr_venv.sh  shadow_observation_commands.py  smoke_test_three_modes.py  start_claudia.sh
scripts/deploy/: deploy_task11_optimizations.sh  deploy_track_b.sh  start_production_brain_v2.sh  start_sdk_exclusive.sh
scripts/hardware_validation/: README_visualization.md  lidar_l1_validation.py  rviz_pointcloud_viewer.sh  save_pointcloud_pcd.py  static_pointcloud_viewer.py
scripts/maintenance/: daily_cleanup.sh  project_cleanup.sh
scripts/setup/: README_cyclonedds.md  deploy_claudia_llm.sh  install_cyclonedds_deps.sh  install_unitree_sdks.sh  setup_cyclonedds.sh  setup_cyclonedds_workspace.sh  setup_environment.sh  setup_ros2_environment.sh  test_dds_communication.sh  validate_ros2.sh  verify_environment.sh
scripts/test/: VERIFY_v12.2_OPTIMIZATION.sh  quick_action_test.py  quick_llm_test.py  run_enhanced_japanese_commander.sh  test_action_mapping_fix.py  test_dance_return_codes.py  test_enhanced_japanese_commander.py  test_model_configuration.py  test_optimized_performance.py  verify_dance_fix.py  verify_llm_performance_fix.py
scripts/validation/audio/: AUDIO_TROUBLESHOOTING_GUIDE.md  AUDIO_VALIDATION_REPORT.md  asr_inference_test.py  audio_config_example.json  audio_validation_main.py  go2_audio_test.py  go2_mic_ssh_test.py  (+4 more)
src/claudia/: __init__.py
test/: README.md  __init__.py  conftest.py  run_tests.py
test/hardware/: __init__.py  conftest.py  test_basic_control_commands.py  test_communication_performance.py  test_complete_sdk_actions.py  test_llm_real_robot_control.py  test_llm_robot_state_aware.py  test_official_style.py  test_robot_state_reading.py  test_sportclient_connection.py  test_unitree_connection.py
test/integration/: conftest.py  test_interactive_japanese_commander.py  test_production_brain_integration.py
test/led_system/: README.md  __init__.py  data_collector.py  demo_test.py  led_test_base.py  quick_test.py  run_led_tests.py  test_config.py  test_led_modes.py  test_performance.py
test/unit/: test_action_registry.py  test_asr_bridge.py  test_audio_capture.py  test_audit_extension.py  test_channel_router.py  test_commander_migration.py  test_commander_wakeup.py  test_pcm_utils.py  test_safety_compiler.py  test_safety_integration.py  test_safety_regression.py  test_sanitize_response.py  test_sdk_state_provider.py  test_voice_commander.py  test_wake_word.py
test/utils/: __init__.py  test_helpers.py
(+83 files in other folders)
