[project]
name = "claudia"
version = "0.1.0"
description = "LLM-brained AI system for the Unitree Go2 quadruped robot"
authors = [
    {name = "Claudia Development Team", email = "dev@claudia-robot.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pillow>=8.0.0",
    
    # Note: ROS2 dependencies (rclpy, sensor_msgs, etc.) are installed via apt
    # and should not be listed as pip dependencies
    
    # AI/ML dependencies
    "torch>=1.11.0",
    "torchvision>=0.12.0",
    "transformers>=4.20.0",
    "ultralytics>=8.0.0",  # YOLOv8
    
    # Audio processing
    "pyaudio>=0.2.11",
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
    "pvporcupine>=3.0.0",  # Wake word detection
    
    # Communication and networking
    "websockets>=10.0",
    "asyncio-mqtt>=0.11.0",
    "pyserial>=3.5",
    
    # FastAPI and API service dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",  # For form data handling
    "sse-starlette>=1.6.0",  # For Server-Sent Events
    
    # Caching and performance
    "cachetools>=5.3.0",
    "aiocache>=0.12.0",
    "redis>=5.0.0",
    
    # Monitoring and observability  
    "prometheus-client>=0.19.0",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # Utilities
    "pyyaml>=5.4.0",
    "dataclasses-json>=0.5.0",
    "python-dotenv>=0.19.0",
    "loguru>=0.6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

tensorrt = [
    "tensorrt>=8.4.0",
    "pycuda>=2022.1",
]

realsense = [
    "pyrealsense2>=2.50.0",
]

[project.scripts]
claudia = "claudia.main:main"
claudia-setup = "claudia.scripts.setup:main"
claudia-test = "claudia.scripts.test:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=scripts"
asyncio_mode = "auto"