[project]
name = "claudia"
version = "0.1.0"
description = "LLM-brained AI system for the Unitree Go2 quadruped robot"
authors = [
    {name = "Claudia Development Team", email = "dev@claudia-robot.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    # Core: array operations for audio processing (pcm_utils, vad_processor) and LED control
    "numpy>=1.21.0",
    # Core: LED visual effects in unified_led_controller
    "opencv-python>=4.5.0",
    # Note: ROS2 dependencies (rclpy, sensor_msgs, etc.) are installed via apt
    # Note: Audio capture uses arecord subprocess, not PyAudio
    # Note: ASR (faster-whisper) is in [asr] optional group below
]

[project.optional-dependencies]
dev = [
    # Note: Jetson system pytest is 4.6.9 (from ROS2 Foxy); pytest>=7 breaks ROS2 plugins
    "pytest>=4.6",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]

asr = [
    # Voice pipeline: faster-whisper ASR engine + silero-vad via onnxruntime
    # IMPORTANT on Jetson Orin NX: onnxruntime must be pinned to 1.18.1
    #   (>=1.19 crashes with SIGABRT in CPU topology detection on offline cores)
    #   Install manually: pip3 install faster-whisper onnxruntime==1.18.1
    "faster-whisper>=0.10.0",
    "onnxruntime>=1.16.0",
]

tensorrt = [
    "tensorrt>=8.4.0",
    "pycuda>=2022.1",
]

realsense = [
    "pyrealsense2>=2.50.0",
]

[project.scripts]
claudia = "claudia.main:main"
claudia-setup = "claudia.scripts.setup:main"
claudia-test = "claudia.scripts.test:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=scripts"
asyncio_mode = "auto"